# dotfiles-rs

./: Cargo.toml  README.md
.chglog/: config.yml
src/: error.rs  install.rs  lib.rs  main.rs  pick.rs  repo.rs
