[package]
name = "dotfiles"
authors = [ "yuma140902" ]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = [ "derive", "env" ] }
dirs = "4"
more_path_types = { git = "https://github.com/yuma140902/more-path-types-rs", rev = "8e585e9" }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8.23"
symlink = "0.1.0"
